generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  admin
  waiter
  kitchen
  cashier
  domiciliary
}

enum TableStatus {
  available
  unavailable
}

enum ProductStatus {
  available
  unavailable
}

enum OrderStatus {
  open
  in_preparation
  ready
  served
  canceled
}

enum OrderDetailStatus {
  pending
  in_preparation
  ready
  served
  canceled
}

enum DeliveryStatus {
  pending
  assigned
  picked_up
  delivered
  canceled
}

enum InvoiceStatus {
  draft
  issued
  canceled
}

enum PaymentMethod {
  cash
  debit_card
  credit_card
  transfer
  other
}

enum PaymentStatus {
  pending
  completed
  failed
  refunded
}

model User {
  id          String    @id @default(uuid())
  name        String    @db.VarChar(70)
  username    String    @unique @db.VarChar(70)
  role        UserRole
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime? @map("updated_at")

  dineInOrders        DineInOrder[]
  deliveryOrders      DeliveryOrder[]
  orderStateHistory   OrderStateHistory[]
  detailStateHistory  OrderDetailStateHistory[]
  invoices            Invoice[]

  @@map("users")
}

model Customer {
  id          String    @id @default(uuid())
  name        String    @db.VarChar(70)
  username    String    @unique @db.VarChar(70)
  phone       String    @db.VarChar(30)
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime? @map("updated_at")

  addresses       CustomerAddress[]
  deliveryOrders  DeliveryOrder[]

  @@map("customers")
}

model CustomerAddress {
  id              Int       @id @default(autoincrement())
  customerId      String    @map("id_customer")
  label           String    @db.VarChar(70)
  address         String    @db.VarChar(255)
  additionalInfo  String    @db.VarChar(255) @map("additional_info")
  createdAt       DateTime  @default(now()) @map("created_at")
  customer        Customer  @relation(fields: [customerId], references: [id], onDelete: Cascade)
  deliveryOrders  DeliveryOrder[]

  @@map("customer_addresses")
}

model RestaurantTable {
  id          Int         @id @default(autoincrement())
  name        String
  description String?
  state       TableStatus @default(available)
  createdAt   DateTime    @default(now()) @map("created_at")
  updatedAt   DateTime?   @map("updated_at")

  dineInOrders DineInOrder[]

  @@map("restaurant_tables")
}

model Category {
  id          Int       @id @default(autoincrement())
  name        String
  description String?
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime? @map("updated_at")

  products Product[]

  @@map("categories")
}

model Product {
  id          Int           @id @default(autoincrement())
  categoryId  Int           @map("id_category")
  name        String
  description String?
  price       Decimal
  status      ProductStatus @default(available)
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime?     @map("updated_at")

  category      Category         @relation(fields: [categoryId], references: [id])
  orderDetails  OrderDetail[]

  @@map("products")
}

model Order {
  id           Int           @id @default(autoincrement())
  status       OrderStatus   @default(open)
  subtotal     Decimal       @db.Decimal(12,2)
  taxRate      Decimal       @default(0) @db.Decimal(5,2) @map("tax_rate")
  taxAmount    Decimal       @default(0) @db.Decimal(12,2) @map("tax_amount")
  discount     Decimal       @default(0) @db.Decimal(12,2)
  total        Decimal       @db.Decimal(12,2)
  notes        String?
  createdAt    DateTime      @default(now()) @map("created_at")
  updatedAt    DateTime?     @map("updated_at")
  completedAt  DateTime?     @map("completed_at")
  canceledAt   DateTime?     @map("canceled_at")

  dineInOrder     DineInOrder?
  deliveryOrder   DeliveryOrder?
  details         OrderDetail[]
  stateHistory    OrderStateHistory[]
  invoice         Invoice?

  @@map("orders")
}

model DineInOrder {
  orderId     Int       @id @map("id_order")
  tableId     Int       @map("id_table")
  waiterId    String    @map("id_waiter")
  guestCount  Int?      @map("guest_count")

  order   Order           @relation(fields: [orderId], references: [id], onDelete: Cascade)
  table   RestaurantTable @relation(fields: [tableId], references: [id])
  waiter  User            @relation(fields: [waiterId], references: [id])

  @@map("dine_in_orders")
}

model DeliveryOrder {
  orderId       Int             @id @map("id_order")
  customerId    String          @map("id_customer")
  addressId     Int             @map("id_address")
  domiciliaryId String          @map("id_domiciliary")
  status        DeliveryStatus  @default(pending)
  deliveryFee   Decimal?        @db.Decimal(12,2) @map("delivery_fee")
  createdAt     DateTime?       @map("created_at")
  updatedAt     DateTime?       @map("updated_at")
  deliveredAt   DateTime?       @map("delivered_at")

  order     Order            @relation(fields: [orderId], references: [id], onDelete: Cascade)
  customer  Customer         @relation(fields: [customerId], references: [id])
  address   CustomerAddress  @relation(fields: [addressId], references: [id])
  domiciliary User           @relation(fields: [domiciliaryId], references: [id])

  @@map("delivery_orders")
}

model OrderDetail {
  id          Int               @id @default(autoincrement())
  orderId     Int               @map("id_order")
  productId   Int               @map("id_product")
  amount      Int
  unitPrice   Decimal           @db.Decimal(12,2) @map("unit_price")
  notes       String?
  state       OrderDetailStatus @default(pending)
  createdAt   DateTime          @default(now()) @map("created_at")
  updatedAt   DateTime?         @map("updated_at")
  completedAt DateTime?         @map("completed_at")
  canceledAt  DateTime?         @map("canceled_at")

  order     Order      @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product    @relation(fields: [productId], references: [id])
  history   OrderDetailStateHistory[]

  @@map("order_detail")
}

model OrderStateHistory {
  id        Int          @id @default(autoincrement())
  orderId   Int          @map("id_order")
  userId    String       @map("id_user")
  notes     String?
  oldState  OrderStatus? @map("old_state")
  newState  OrderStatus  @map("new_state")
  createdAt DateTime     @default(now()) @map("created_at")

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)
  user  User  @relation(fields: [userId], references: [id])

  @@map("order_state_history")
}

model OrderDetailStateHistory {
  id            Int                @id @default(autoincrement())
  orderDetailId Int                @map("id_order_detail")
  userId        String             @map("id_user")
  notes         String?
  oldState      OrderDetailStatus? @map("old_state")
  newState      OrderDetailStatus  @map("new_state")
  createdAt     DateTime           @default(now()) @map("created_at")

  orderDetail OrderDetail @relation(fields: [orderDetailId], references: [id], onDelete: Cascade)
  user        User        @relation(fields: [userId], references: [id])

  @@map("order_detail_state_history")
}

model Invoice {
  id          Int            @id @default(autoincrement())
  orderId     Int            @unique @map("id_order")
  cashierId   String         @map("id_cashier")
  subtotal    Decimal        @db.Decimal(12,2)
  taxRate     Decimal        @default(0) @db.Decimal(5,2) @map("tax_rate")
  taxAmount   Decimal        @default(0) @db.Decimal(12,2) @map("tax_amount")
  total       Decimal        @db.Decimal(12,2)
  status      InvoiceStatus  @default(draft)
  issuedAt    DateTime?      @map("issued_at")
  createdAt   DateTime       @default(now()) @map("created_at")

  order    Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  cashier  User     @relation(fields: [cashierId], references: [id])
  payment  Payment?

  @@map("invoices")
}

model Payment {
  invoiceId   Int             @id @map("id_invoice")
  amount      Decimal         @db.Decimal(12,2)
  method      PaymentMethod
  status      PaymentStatus   @default(pending)
  notes       String?
  paidAt      DateTime?       @map("paid_at")
  createdAt   DateTime        @default(now()) @map("created_at")

  invoice Invoice @relation(fields: [invoiceId], references: [id], onDelete: Cascade)

  @@map("payments")
}